PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016 PHP 7.0.3

- Apache2handler:
  . Fix >2G Content-Length headers in apache2handler. (Adam Harvey)

- Core:
  . Fixed bug #71300 (Segfault in zend_fetch_string_offset). (Laruence)
  . Fixed bug #71221 (Null pointer deref (segfault) in get_defined_vars via
    ob_start). (hugh at allthethings dot co dot nz)
  . Fixed bug #71201 (round() segfault on 64-bit builds). (Anatol)
  . Added support for new HTTP 451 code. (Julien)
  . Fixed Bug #71275 (Bad method called on cloning an object having a trait).
    (Bob)
  . Fixed bug #71273 (A wrong ext directory setup in php.ini leads to crash).
    (Anatol)
  . Fixed bug #71297 (Memory leak with consecutive yield from). (Bob)
  . Fixed bug #71314 (var_export(INF) prints INF.0). (Andrea)

- CURL:
  . Fixed bug #71227 (Can't compile php_curl statically). (Anatol)
  . Fixed bug #71225 (curl_setopt() fails to set CURLOPT_POSTFIELDS with
    reference to CURLFile). (Laruence)

- LDAP:
  . Fixed bug #71249 (ldap_mod_replace/ldap_mod_add store value as string
    "Array"). (Laruence)
  
- SPL:
  . Fixed bug #71204 (segfault if clean spl_autoload_funcs while autoloading).
    (Laruence)
  . Fixed bug #71202 (Autoload function registered by another not activated
    immediately). (Laruence)

- Session:
  . Fixed bug #71038 (session_start() returns TRUE on failure).
    Session save handlers must return 'string' always for successful read.
    i.e. Non-existing session read must return empty string. PHP 7.0 is made
    not to tolerate buggy return value. (Yasuo)

- Standard:
  . Fixed bug #71287 (Error message contains hexadecimal instead of decimal
    number). (Laruence)
  . Fixed bug #71264 (file_put_contents() returns unexpected value when 
    filesystem runs full). (Laruence)
  . Fixed bug #71245 (file_get_contents() ignores "header" context option if